--- a/Ex2/index.html
+++ b/Ex2/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" type="image/jpg" href="../../Logo-M.png"/>
 
-    <title>JS Es 1</title>
+    <title>JS Es 2</title>
   </head>
 
   <body>
 
- <p id="maggiore"></p>
+ <p id="minore"></p>
  <p id="altro"></p>
 
     <script type="text/javascript" src="master.js"></script>
