JS Ex3 complete

--- a/Ex3/index.html
+++ b/Ex3/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" type="image/jpg" href="../../Logo-M.png"/>
 
-    <title>JS Es 1</title>
+    <title>JS Es 3</title>
   </head>
 
   <body>
 
- <p id="maggiore"></p>
- <p id="altro"></p>
+ <p id="somma"></p>
+
 
     <script type="text/javascript" src="master.js"></script>
   </body>
