--- a/Ex1/index.html
+++ b/Ex1/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Jolly+Lodger|Roboto&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image/jpg" href="../../Logo-M.png"/>
 
     <title>JS Es 1</title>
@@ -12,8 +13,23 @@
 
   <body>
 
- <p id="maggiore"></p>
- <p id="altro"></p>
+    <div class="container flex-container">
+      <div class="item flex-container">
+        <div class="primo flex-container">
+          <h1>Oggi scoprirai una cosa che ti sconvolgerà...</h1>
+          <div class="uno">Hover qui per scoprire il Segreto</div>
+          <h1 class="scoperta">Devi sapere che il numero
+            <span id="maggiore">scoperta</span>
+             è il maggiore dei due numeri da te inseriti. <br> Sconvolgente, lo so!<br> Ora la tua vita non sarà più la stessa.
+           </h1>
+        </div>
+        <div class="secondo flex-container">
+
+        </div>
+
+
+      </div>
+    </div>
 
     <script type="text/javascript" src="master.js"></script>
   </body>
